[package]
name = "carbonite_nt_nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# near-sdk = "^4.0.0"
near-sdk = { version = "4.1.0", features = ["unstable"] }
serde_json = "^1.0"
# schemars = "0.8"
# ts-rs = "^6.2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
